# placeholder

./: .gitignore  build.sh  meson.build
include/hashtable/: hashtable.h
placeholder/: all_characters.c  characters.c  ff.h  fonts.c  main.c  pler.h  plog.c  plog.h  util.c  util.h  world.c  world.h
placeholder/instances/: instance_methods.c  instances.c  instances.h
placeholder/instances/services/: input_service.c  input_service.h
prebuild/: prebuild.sh
src/: all_characters.c  characters.c  characters.h  fonts.c  fonts.h  hashes.c  main.c  world.c  world.h
src/instances/: instances.c  instances.h
src/plui/: plui.c  plui.h
